Added org join function
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/crd/bases/operator.fabric.hyperledger.org_agents.yaml
+++ b/config/crd/bases/operator.fabric.hyperledger.org_agents.yaml
@@ -42,3 +42,8 @@ spec:
     storage: true
     subresources:
       status: {}
+#     additionalPrinterColumns:
+#     - name: Result
+#       type: string
+#       description: The result of the agent last action
+#       jsonPath: .status.conditions[0].result
