--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -11,6 +11,7 @@ patchesStrategicMerge:
 - manager_image.yaml
 - debug_logs_patch.yaml
 - ../default/manager_auth_proxy_patch.yaml
+- pull_policy/Never.yaml
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
@@ -20,4 +21,5 @@ resources:
 - ../manager
 images:
 - name: testing
-  newName: testing-operator
+  newName: email4tong/fabricop
+  newTag: v1.0.0
