--- a/molecule/default/tasks/ca_test.yml
+++ b/molecule/default/tasks/ca_test.yml
@@ -12,8 +12,29 @@
       status: "True"
   vars:
     cr_file: 'operator_v1alpha1_ca.yaml'
+  register: cmdresult
 
-- name: Add assertions here
+- name: Check the resource
   assert:
-    that: false
-    fail_msg: FIXME Add real assertions for your operator
+    that:
+    - cmdresult.failed == False
+    - cmdresult.changed == True
+    - cmdresult.method == 'create'
+    - cmdresult.result.status.conditions[0].ansibleResult.failures == 0
+    - cmdresult.result.status.operations != ''
+    - cmdresult.result.status.endpoint != ''
+    fail_msg: Fabric CA node creation failed
+    success_msg: Fabric CA node was creation successfully
+
+- name: Access the operation endpoint
+  get_url:
+    url: "{{ cmdresult.result.status.operations }}/healthz"
+    dest: /tmp/notimportant
+  register: cmdresult
+
+- name: Check the response
+  assert:
+    that:
+    - cmdresult.status_code == 200
+    fail_msg: Fabric CA node healthz check failed
+    success_msg: Fabric CA node healthz check succeeded
