--- a/molecule/kind/converge.yml
+++ b/molecule/kind/converge.yml
@@ -6,15 +6,9 @@
 
   tasks:
     - name: Build operator image
-      docker_image:
-        build:
-          path: '{{ project_dir }}'
-          pull: no
-        name: '{{ operator_image }}'
-        tag: latest
-        push: no
-        source: build
-        force_source: yes
+      command: make docker-build -IMG={{ operator_image }}
+      args:
+        chdir: '{{ project_dir }}'
 
     - name: Load image into kind cluster
       command: kind load docker-image --name osdk-test '{{ operator_image }}'
