--- a/molecule/kind/molecule.yml
+++ b/molecule/kind/molecule.yml
@@ -28,7 +28,7 @@ provisioner:
         config_dir: ${MOLECULE_PROJECT_DIRECTORY}/config
         samples_dir: ${MOLECULE_PROJECT_DIRECTORY}/config/samples
         project_dir: ${MOLECULE_PROJECT_DIRECTORY}
-        operator_image: testing-operator
+        operator_image: ${OPERATOR_IMAGE}
         operator_pull_policy: "Never"
         kubeconfig: "{{ lookup('env', 'KUBECONFIG') }}"
         kustomize: ${KUSTOMIZE_PATH:-kustomize}
