--- a/roles/orderer/tasks/main.yml
+++ b/roles/orderer/tasks/main.yml
@@ -3,7 +3,7 @@
   include_tasks: "validation.yml"
 
 - name: Get NODE_HOSTNAME or NODE_IP info
-  include_tasks: "{{ role_path }}/../../playbooks/network/get-hostname.yml"
+  include_tasks: "{{ ROOTDIR }}/playbooks/network/get-hostname.yml"
 
 - name: Get the home directory and setup node name
   set_fact:
@@ -90,7 +90,7 @@
 # The module included here will expose the target ports to outside of k8s cluster and
 # will return a list of ports for the target ports
 - name: Now expose Orderer service to outside of the k8s cluster
-  include_tasks: '{{ role_path }}/../../playbooks/network/{{ LB_TYPE|lower }}/apply.yml'
+  include_tasks: '{{ ROOTDIR }}/playbooks/network/{{ LB_TYPE|lower }}/apply.yml'
 
 - name: Check if the ports exposed correctly
   fail:
@@ -183,6 +183,23 @@
             - name: fabric-orderer
               image: 'hyperledger/fabric-orderer:{{ release }}'
               imagePullPolicy: IfNotPresent
+              livenessProbe:
+                httpGet:
+                  path: /healthz
+                  port: 7060
+                failureThreshold: 1
+                periodSeconds: 10
+              readinessProbe:
+                initialDelaySeconds: 5
+                periodSeconds: 4
+                timeoutSeconds: 1
+                successThreshold: 1
+                failureThreshold: 1
+                httpGet:
+                  host:
+                  scheme: HTTP
+                  path: /healthz
+                  port: 7060
               env:
               - { name: "FABRIC_LOGGING_SPEC", value: "{{ log_level }}" }
               - { name: "ORDERER_GENERAL_LISTENADDRESS", value: "0.0.0.0" }
