--- a/roles/agent/ops/channeljoin/apply.yml
+++ b/roles/agent/ops/channeljoin/apply.yml
@@ -26,9 +26,8 @@
   vars:
     RESULT_MSG: 'Failed - Channel name, orderer node, peer node all must be provided'
 
-# Now we get the nodecert under which the operation is performed
-# - name: Get user info
-#   include_tasks: '{{ role_path }}/common/getuserinfo.yml'
+- name: Mark the start of the agent
+  include_tasks: '{{ role_path }}/common/startplay.yml'
 
 # Now we get the orderer node info from either nodecert or node asset
 - name: Get orderer node info
