--- a/test.yaml
+++ b/test.yaml
@@ -3,22 +3,28 @@
   gather_facts: no
   connection: local
   tasks:
-    - name: Check if this is k8s
-      set_fact:
-        used_ports: "{{ [4, 5, 6, 8, 10] }}"
-        ext_port: 4
+  - name: setup variable
+    set_fact:
+      downloadurl: "kubectl cp -n osdk-test -c manager osdk-controller-manager-64fb694b5b-qglqj:/opt/ansible/agent/download/mychannel_config.json"
 
-    - name: find an available port
-      set_fact:
-        ext_port: "{{ item }}"
-      when: ext_port in used_ports
-      loop: "{{ range(4, 500, 1) | list }}"
-      
-    - get_url:
-        url: https://github.com/hyperledger/fabric/releases/download/v2.3.2/hyperledger-fabric-linux-amd64-2.3.2.tar.gz
-        dest: /opt/ansible
+  - name: Parse
+    set_fact:
+      pieces: "{{ downloadurl.split(':')[0].split(' ') }}"
 
-    - unarchive:
-        src: /opt/ansible/hyperledger-fabric-linux-amd64-2.3.2.tar.gz
-        dest: /opt/ansible/bin
-        creates: /opt/ansible/bin/bin/peer
+  - debug:
+      var: pieces
+
+  - name: Test file
+    community.kubernetes.k8s_exec:
+      namespace: "{{ pieces[3] }}"
+      pod: "{{ pieces[6] }}"
+      container: manager
+      command: "ls -la"
+
+  - name: Make a change to the configuration file
+    community.kubernetes.k8s_exec:
+      namespace: "{{ pieces[3] }}"
+      pod: "{{ pieces[6] }}"
+      container: manager 
+      command: >-
+        /usr/bin/sed -i 's/"max_message_count": 10/"max_message_count": 20/g' /opt/ansible/agent/upload/mychannel_config.json
